[project]
name = "codereviewenv"
version = "0.1.0"
description = "OpenEnv Code Review Environment"
authors = [
    { name = "Anusha" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
